bppackaging/src/objects/Vendor_Receiving_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Received Qty</label>
        <precision>15</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOLine_Item_Group__c</fullName>
        <label>VOLine Item Group</label>
        <referenceTo>Vendor_Order_Line_Item_Group__c</referenceTo>
        <relationshipLabel>Vendor Receiving Line Items</relationshipLabel>
        <relationshipName>Vendor_Order_Receiving_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Group__c</fullName>
        <label>Vendor Receiving Group</label>
        <referenceTo>Vendor_Receiving_Group__c</referenceTo>
        <relationshipLabel>Vendor Receiving Line Items</relationshipLabel>
        <relationshipName>Vendor_Receiving_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Receiving Line Item</label>
    <nameField>
        <displayFormat>VRLI-{00000000}</displayFormat>
        <label>Vendor Receiving Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Receiving Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>